# setup-environment-daviddaguero

./: CMakeLists.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
